# Servidor1-Docuclas

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  railway.json  start.ps1
classifier/: Dockerfile  main.py
client/: buf.gen.yaml  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  vite-env.d.ts
client/src/components/: Sidebar.tsx
client/src/context/: AuthContext.tsx
client/src/pages/: AdminPanel.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Register.tsx  Topics.tsx
client/src/proto/: admin_pb.ts  auth_pb.ts  document_pb.ts  topic_pb.ts
client/src/services/: adminService.ts  authService.ts  baseUrl.ts  documentService.ts  topicService.ts
client/src/styles/: auth.css  dashboard.css  global.css
client/src/types/: index.ts
database/: docker-compose.yml
database/mongo/: mongo-init.js  mongod.conf
gateway/: Dockerfile  docker-compose.yml  envoy-internal.yaml  envoy.yaml
nginx/: nginx.conf
server/: Cargo.toml  Dockerfile  render.yaml  start-services.sh  start.ps1
server/crates/common/: Cargo.toml
server/crates/common/src/: config.rs  error.rs  jwt.rs  lib.rs
server/crates/pdf-classifier/: Cargo.toml
server/crates/pdf-classifier/src/: extractor.rs  lib.rs  matcher.rs
server/crates/proto-gen/: Cargo.toml  build.rs
server/crates/proto-gen/src/: lib.rs
server/proto/: admin.proto  auth.proto  document.proto  topic.proto
server/services/admin-service/: Cargo.toml
server/services/admin-service/src/: handlers.rs  main.rs  models.rs  server.rs
server/services/auth-service/: Cargo.toml
server/services/auth-service/src/: handlers.rs  main.rs  models.rs  server.rs
server/services/doc-service/: Cargo.toml
server/services/doc-service/src/: classifier_client.rs  handlers.rs  main.rs  models.rs  server.rs  storage.rs
server/services/topic-service/: Cargo.toml
server/services/topic-service/src/: handlers.rs  main.rs  models.rs  server.rs
