[package]
name    = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
bcrypt       = { workspace = true }
chrono       = { workspace = true }
dotenv       = { workspace = true }
mongodb      = { workspace = true }