[package]
name    = "pdf-classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

# Extracción de texto desde PDF
pdf-extract = "0.7"

# Procesamiento de texto
regex       = "1"
unicode-normalization = "0.1"